--- a/package.json
+++ b/package.json
@@ -13,5 +13,5 @@
     "express": "^4.19.2"
   },
   "devDependencies": {},
-  "description": ""
+  "description": "Este projeto consiste na criação de um cardápio online para um restaurante, utilizando as funcionalidades aprendidas durante as aulas. O objetivo é proporcionar uma interface amigável e funcional para gerenciamento e visualização dos produtos oferecidos pelo restaurante."
 }
